Generic changes/fixes
	* enable record based scale sync property updates (outside device XML)
	
Device specific changes/fixes
	* HoTTAdapter* - fix scale synchronization, formatting, unit and factor to support different GPS data source
	* HoTTAdapter* - change SM GPS-Logger names from gyro to acceleration
	* HoTTAdapter* - change GPS time and year to more readable format
	* Triangoli - add initial support

Version 3.4.7 - 27 Mar 2021
Generic changes/fixes
	* update copyright 2021
	* update dialog sizes to support uneven Windows scaling 
	* fix error while editing FileComment tab while focus lost
	* fix error in setting returning initial wrong decimal separator
	* make tolerant missing symbols in OSD (variable measurement size written by Android app) 
	* fix scroll problem file comment window record comment table
	
Device specific changes/fixes
	* JetiAdapter - fix check GPS data to enable Google Earth export
	* IGCAdapter - fix support configuring speed or others in KML/KMZ export
	* HoTTAdapter* - fix unit of GPS vibration
	* HoTTAdapter* - detecting GPS type to sort and re-name measurements
	* HoTTAdapter* - fix missing ESC while importing *.log
	* GraupnerUDP* - fix update step charge tabulator
	* GraupnerUDP* - fix update step charge min capacity/current
	* IGCAdapter - fix loading older OSD file
	* IGCAdapter - enable missing color and record dependency configuration
	* iCharger* - fix energy calculation
	* iChargerDuo* - fix max power setting channel 2
	* iCharger206B - add support opening *.lov

Version 3.4.6 - 26 Dec 2020
Generic changes/fixes
	* update XSD version to force device properties replacement
	* reduce flicker while measuring on Windows
	* fix error in history analyze while defined time outside existing file dates
	* fix adding wrong histoVault while picking vaults
	
Device specific changes/fixes
	* Weatronic-Telemetry - add error handling for cases buffer offset zero
	* HoTTAdapter* - add missing GPS values home direction - version
